# UNIT3D-Community-Edition

./: .env.example  .gitignore  Cargo.toml  composer.json  docker-compose.yml  phpstan-baseline.neon  phpstan.neon  unit3d-config.toml
app/Bots/: CasinoBot.php  NerdBot.php  SystemBot.php
app/Console/: ConsoleTools.php
app/Helpers/: StringHelper.php  TorrentHelper.php
app/Models/: Apikey.php  Application.php  ApplicationImageProof.php  ApplicationUrlProof.php  Audit.php  BonExchange.php  BonTransactions.php  Bot.php  BotTransaction.php  Category.php  Chatroom.php  Comment.php  EmailUpdate.php  FailedLoginAttempt.php  ForumPermission.php  Gift.php  Group.php  History.php  Keyword.php  Like.php  Message.php  Option.php  Passkey.php  Peer.php  Post.php  PostTip.php  Resurrection.php  Rss.php  Rsskey.php  Subtitle.php  Ticket.php  Topic.php  (+10 more)
config/: broadcasting.php  database.php  other.php  scout.php  unit3d.php
crates/unit3d-api/: Cargo.toml  diesel.toml
crates/unit3d-api/src/: error.rs  main.rs  routes.rs
crates/unit3d-api/src/database/: models.rs  schema.rs
crates/unit3d-api/src/features/: mod.rs  resource.rs
crates/unit3d-api/src/features/torrents/: filter.rs  mod.rs
crates/unit3d-api/src/middleware/: authenticate.rs
crates/unit3d-api/src/state/: config.rs  database_pool.rs  mod.rs
crates/unit3d-rs/: Cargo.toml  diesel.toml
crates/unit3d-rs/i18n/en/: articles.ftl  auth.ftl  backup.ftl  blocks.ftl  bon.ftl  bot.ftl  bug.ftl  comment.ftl  common.ftl  email.ftl  forum.ftl  graveyard.ftl  mediahub.ftl  notification.ftl  page.ftl  pagination.ftl  passwords.ftl  playlist.ftl  pm.ftl  poll.ftl  regions.ftl  request.ftl  rss.ftl  staff.ftl  stat.ftl  subtitle.ftl  ticket.ftl  torrent.ftl  user.ftl  validation.ftl
crates/unit3d-rs/src/: lib.rs  main.rs  routes.rs
crates/unit3d-rs/src/database/: models.rs  schema.rs
crates/unit3d-rs/src/features/: mod.rs
crates/unit3d-rs/src/features/authenticated/pages/: show.rs
crates/unit3d-rs/src/features/components/: datetime.rs  markdown.rs  mod.rs
crates/unit3d-rs/src/features/layout/: child.rs  footer.rs  header.rs  mod.rs
crates/unit3d-rs/src/middleware/: authenticated_user.rs
crates/unit3d-rs/src/state/: db_pool.rs  localizer.rs  mod.rs
routes/: web.php
(+335 files in other folders)
