[package]
name = "unit3d-api"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros", "http2"] }
axum-extra = { version = "0.9.3", features = ["typed-routing"] }
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["mysql"] }
diesel = { version = "2.1.6", features = [
    "64-column-tables",
    "chrono",
    "serde_json",
] }
diesel-async = { version = "0.4.1", features = ["mysql", "deadpool"] }
dotenvy = "0.15.7"
http = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.63"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
