[package]
name = "unit3d-rs"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros", "http2"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "typed-routing"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.18"
diesel = { version = "2.1.6", features = [
    "64-column-tables",
    "chrono",
    "numeric",
    "serde_json",
] }
diesel-async = { version = "0.4.1", features = ["mysql", "deadpool"] }
dotenvy = "0.15.7"
fluent = "0.16.1"
http = "1.1.0"
include_dir = "0.7.4"
maud = { version = "0.26.0", features = ["axum"] }
moka = { version = "0.12.7", features = ["future"] }
pulldown-cmark = "0.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unic-langid = { version = "0.9.5", features = ["macros"] }
